kubernetes/hello.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: k8s-demo
        image: mashimine/circle_web:latest
        ports:
        - name: nodejs-port
          containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30303
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: hello
