kubernetes/world.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: world-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: world
    spec:
      containers:
      - name: k8s-demo2
        image: mashimine/circle_web:v2
        ports:
        - name: nodejs-port
          containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: world
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30304
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: world
